@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.20
+Release: 0.22
 Group: System Environment/Base
 Source: ftp://jbj.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -500,6 +500,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Fri Feb 11 2005 Jeff Johnson <jbj@jbj.org> 4.4.1-0.22
+- permit build scriptlet interpreters to be individually overridden.
+
 * Thu Feb 10 2005 Jeff Johnson <jbj@jbj.org> 4.4.1-0.20
 - perform callbacks as always (#147537).
 
